--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+packages-microsoft-prod.deb
 
 # Editor directories and files
 .idea
